@@ -6103,6 +6103,16 @@ blockquote small {
 	padding: 60px;
 	position: relative;
 }
+@media (max-width: 767px) {
+	.element-jumbotron .jumbotron-outer.has-bg,
+	.element-jumbotron_slider .jumbotron-outer.has-bg { /* should always have bg */
+    	padding-right: 40px;
+		padding-left: 40px;
+	}
+	.element-jumbotron_slider .tb-slider-arrows {
+		display: none;
+	}
+}
 .tb-jumbotron p {
 	font-size: inherit;
 	font-weight: inherit;
@@ -6144,6 +6154,16 @@ blockquote small {
 	.tb-jumbotron .tb-text-block-wrap.text-large .tb-text-block {
 		font-size: 2.25rem;
 	}
+}
+.tb-jumbotron .tb-text-block .tb-divider {
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+.tb-jumbotron .tb-text-block .tb-divider.suck-up {
+	margin-top: 10px;
+}
+.tb-jumbotron .tb-text-block .tb-divider.suck-down {
+	margin-bottom: 10px;
 }
 .tb-jumbotron .jumbotron-buttons {
 	padding-top: 10px;
