@@ -6108,6 +6108,16 @@ blockquote small {
 	padding: 60px;
 	position: relative;
 }
+@media (max-width: 767px) {
+	.element-jumbotron .jumbotron-outer.has-bg,
+	.element-jumbotron_slider .jumbotron-outer.has-bg { /* should always have bg */
+    	padding-right: 40px;
+		padding-left: 40px;
+	}
+	.element-jumbotron_slider .tb-slider-arrows {
+		display: none;
+	}
+}
 .tb-jumbotron p {
 	font-size: inherit;
 	font-weight: inherit;
